[tool.poetry]
name = "kreme201-github-io-server"
version = "0.1.0"
description = ""
authors = ["Kreme201 <kreme201@gmail.com>"]
readme = "README.md"
packages = [{include = "kreme201"}]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
fastapi = "^0.88.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
