[tool.poetry]
name = "kreme201-github-io-server"
version = "0.1.0"
description = ""
authors = ["Kreme201 <kreme201@gmail.com>"]
readme = "README.md"
packages = [{include = "kreme201"}]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
replit = "^3.2.4"
urllib3 = "^1.26.12"
uvicorn = { extras = ["standard"], version = "^0.20.0" }
fastapi = "^0.88.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = { extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
